--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,17 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "todolist",
-    "host": "127.0.0.1",
+    "username": "osw31sxbk8z080jw",
+    "password": "sc08aof9fz1jidmd",
+    "database": "database_production",
+    "host": "wvulqmhjj9tbtc1w.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "osw31sxbk8z080jw",
+    "password": "sc08aof9fz1jidmd",
+    "database": "database_production",
+    "host": "wvulqmhjj9tbtc1w.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "dialect": "mysql"
   },
